--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -17,7 +17,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!--<link rel="manifest" href="/site.webmanifest">--->
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#C567B7">
   <meta name="msapplication-TileColor" content="#7645C1">
   <meta name="theme-color" content="#D5E9FF">
@@ -196,7 +196,7 @@
       </div>
     </section>
   </main>
-  <section id="pitch-us" class="pitch_us">
+  <section id="pitch-us" class="pitch-us">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -219,7 +219,7 @@
               </svg>
             </div>
             <div
-              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+              class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>01. MEET US</h3>
               <p>Get friendly feedback on your project and some fine coffee or&nbsp;tea.</p>
             </div>
@@ -240,7 +240,7 @@
               </svg>
             </div>
             <div
-              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+              class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>02. PROTOTYPE</h3>
               <p>Have a MVP or product crafted by some skilled tech-monks.</p>
             </div>
@@ -263,7 +263,7 @@
               </svg>
             </div>
             <div
-              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+              class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>03. PARTNERSHIP</h3>
               <p>We summon your development team or help finding your new&nbsp;CTO.</p>
             </div>
@@ -289,7 +289,7 @@
               </svg>
             </div>
             <div
-              class="pitch_us-text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
+              class="pitch-us__text mdc-layout-grid__cell mdc-layout-grid__cell--span-3-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-10-desktop">
               <h3>04. GROWTH</h3>
               <p>We support you in growing your businesses, enhancing your skills, providing our network and help
                 raising
@@ -407,18 +407,18 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="network_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
+          class="network_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <svg width="247" height="277" viewBox="0 0 247 277" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M127.514 117.363C132.432 118.28 136.759 120.847 139.895 124.47L204.952 87.1116C201.567 77.5389 205.397 66.6357 214.557 61.3789C224.904 55.4365 238.125 58.9573 244.096 69.248C250.071 79.5427 246.531 92.6929 236.184 98.6313C227.024 103.892 215.613 101.73 208.966 94.0315L143.913 131.385C145.523 135.957 145.532 141.039 143.917 145.611L208.974 182.964C215.613 175.262 227.024 173.108 236.184 178.369C246.531 184.307 250.071 197.457 244.096 207.748C238.125 218.043 224.904 221.563 214.557 215.621C205.397 210.364 201.572 199.457 204.952 189.884L139.899 152.526C136.763 156.149 132.436 158.72 127.518 159.637V234.353C137.546 236.223 145.128 244.972 145.128 255.494C145.128 267.375 135.45 277 123.497 277C111.551 277 101.873 267.375 101.873 255.494C101.873 244.972 109.459 236.223 119.488 234.353V159.637C114.569 158.72 110.242 156.153 107.102 152.53L42.0487 189.888C45.4337 199.461 41.6042 210.364 32.4443 215.625C22.0976 221.564 8.87576 218.043 2.90101 207.748C-3.06965 197.457 0.470339 184.307 10.817 178.369C19.9769 173.108 31.388 175.27 38.0357 182.968L103.085 145.615C101.47 141.047 101.478 135.961 103.085 131.389L38.0275 94.0356C31.388 101.738 19.9769 103.892 10.817 98.6313C0.470339 92.6929 -3.06961 79.5427 2.90509 69.248C8.87576 58.9573 22.0976 55.4365 32.4443 61.3789C41.6042 66.6357 45.4297 77.5429 42.0487 87.1157L107.102 124.474C110.238 120.851 114.565 118.28 119.483 117.363V42.6472C109.455 40.7773 101.873 32.028 101.873 21.5102C101.873 9.62543 111.551 0 123.501 0C135.45 0 145.128 9.62543 145.128 21.5102C145.128 32.028 137.542 40.7773 127.514 42.6472V117.363ZM123.497 268.551C130.76 268.551 136.633 262.71 136.633 255.49C136.633 248.274 130.76 242.425 123.497 242.429C116.237 242.429 110.368 248.274 110.368 255.49C110.368 262.71 116.241 268.551 123.497 268.551ZM10.2583 203.526C13.888 209.78 21.91 211.918 28.1988 208.304C34.4834 204.698 36.6368 196.715 33.003 190.461C29.3733 184.21 21.3513 182.076 15.0666 185.686C8.77786 189.292 6.62855 197.271 10.2583 203.526ZM10.2623 73.4706C6.62857 79.7293 8.77784 87.708 15.0666 91.314C21.3513 94.9281 29.3774 92.7904 33.003 86.5317C36.6368 80.281 34.4835 72.3024 28.1988 68.6964C21.91 65.0823 13.888 67.2199 10.2623 73.4706ZM236.739 203.526C240.373 197.271 238.224 189.292 231.935 185.686C225.65 182.072 217.624 184.21 213.999 190.461C210.365 196.719 212.518 204.698 218.803 208.304C225.092 211.918 233.114 209.78 236.739 203.526ZM236.739 73.4706C233.114 67.22 225.092 65.0823 218.803 68.6964C212.518 72.3024 210.365 80.281 213.999 86.5317C217.624 92.7904 225.65 94.9281 231.935 91.314C238.224 87.708 240.373 79.7294 236.739 73.4706ZM123.501 8.44935C116.242 8.44935 110.369 14.2903 110.369 21.5104C110.369 28.7305 116.242 34.5715 123.501 34.5715C130.76 34.5715 136.633 28.7305 136.633 21.5104C136.633 14.2903 130.76 8.44935 123.501 8.44935ZM123.501 125.439C130.76 125.439 136.633 131.28 136.633 138.5C136.633 145.72 130.76 151.561 123.501 151.561C116.242 151.561 110.369 145.72 110.369 138.5C110.369 131.28 116.242 125.439 123.501 125.439ZM3.43094 160.383L11.7915 158.854L11.7956 158.862C12.1912 161.438 12.8804 164.277 13.5452 166.804L5.32735 168.934C4.5851 166.196 3.9081 163.178 3.43094 160.383L3.43094 160.383ZM1.5386 143.015L10.0297 142.658L10.0337 142.67C10.1112 145.339 10.2988 148.138 10.6169 150.79L2.17482 151.727C1.80369 148.941 1.63241 145.83 1.5386 143.015L1.5386 143.015ZM2.1422 125.528L10.5843 126.396V126.4C10.3111 129.122 10.1235 131.795 10.0134 134.533L1.52229 134.245C1.62832 131.313 1.84448 128.445 2.14219 125.528L2.1422 125.528ZM5.25803 108.306L13.484 110.387V110.391C12.8152 113.035 12.236 115.668 11.7426 118.349L3.38609 116.852C3.91626 113.968 4.54025 111.153 5.25803 108.306L5.25803 108.306ZM44.4098 46.0261L49.9196 52.4593L49.9155 52.4674C47.8723 54.098 45.7434 56.1099 43.8755 57.9474L37.913 51.932C39.9236 49.9241 42.2156 47.8352 44.4097 46.0261L44.4098 46.0261ZM58.5862 35.7111L63.1417 42.846L63.1335 42.8541C60.8456 44.2576 58.5046 45.8192 56.3554 47.4174L51.3186 40.6151C53.5617 38.8993 56.18 37.1998 58.5862 35.7111ZM74.1162 27.4851L77.5787 35.196H77.5746C75.0706 36.3196 72.648 37.4959 70.2092 38.7696L66.2165 31.3142C68.8226 29.9351 71.4246 28.6898 74.1162 27.4851L74.1162 27.4851ZM90.6659 21.5589L92.9701 29.6876L92.9661 29.6917C90.3274 30.434 87.7458 31.2533 85.1683 32.1701L82.289 24.2198C85.0704 23.2342 87.8315 22.3661 90.6659 21.5589L90.6659 21.5589ZM164.475 24.1428L161.629 32.1052H161.616C159.173 31.1601 156.359 30.3326 153.827 29.643L156.082 21.5022C158.839 22.2282 161.804 23.1571 164.475 24.1428V24.1428ZM180.544 31.1966L176.608 38.6884L176.596 38.6844C174.235 37.4148 171.702 36.1776 169.235 35.127L172.64 27.3877C175.254 28.4626 178.044 29.8702 180.544 31.1965V31.1966ZM195.47 40.457L190.491 47.2958H190.487C188.256 45.6976 186.021 44.2009 183.692 42.7366L188.187 35.5692C190.691 37.1227 193.077 38.7452 195.47 40.457ZM208.905 51.7535L202.979 57.8014L202.975 57.7973C201.009 55.899 199.007 54.0818 196.918 52.3214L202.4 45.868C204.647 47.7704 206.784 49.7133 208.905 51.7536L208.905 51.7535ZM243.562 116.617L235.201 118.146L235.197 118.138C234.802 115.562 234.112 112.723 233.448 110.196L241.665 108.066C242.408 110.804 243.085 113.822 243.562 116.617L243.562 116.617ZM245.454 133.986L236.963 134.343L236.959 134.331C236.882 131.661 236.694 128.863 236.376 126.21L244.818 125.273C245.189 128.06 245.36 131.171 245.454 133.986L245.454 133.986ZM244.851 151.472L236.409 150.604V150.6C236.682 147.878 236.869 145.205 236.98 142.467L245.466 142.755C245.365 145.688 245.148 148.556 244.851 151.472V151.472ZM241.735 168.695L233.505 166.614V166.61C234.178 163.965 234.757 161.333 235.25 158.651L243.607 160.148C243.072 163.032 242.453 165.847 241.735 168.695V168.695ZM202.583 230.974L197.073 224.541L197.077 224.533C199.121 222.902 201.25 220.89 203.117 219.053L209.08 225.068C207.069 227.076 204.777 229.165 202.583 230.974L202.583 230.974ZM188.407 241.289L183.851 234.154L183.859 234.146C186.147 232.743 188.488 231.181 190.638 229.583L195.674 236.385C193.431 238.101 190.813 239.8 188.407 241.289ZM172.877 249.515L169.414 241.804H169.418C171.922 240.681 174.345 239.504 176.78 238.231L180.776 245.686C178.17 247.065 175.568 248.31 172.877 249.515ZM156.327 255.441L154.023 247.313L154.027 247.309C156.666 246.566 159.247 245.747 161.825 244.83L164.704 252.781C161.922 253.766 159.161 254.634 156.327 255.441H156.327ZM82.5177 252.858L85.3644 244.895H85.3766C87.8195 245.84 90.6336 246.668 93.1662 247.357L90.9109 255.498C88.1539 254.772 85.189 253.843 82.5177 252.858H82.5177ZM66.4489 245.804L70.3845 238.312L70.3967 238.316C72.758 239.585 75.2907 240.823 77.7581 241.873L74.3527 249.612C71.7385 248.538 68.9489 247.13 66.4489 245.804L66.4489 245.804ZM51.5224 236.543L56.5021 229.704H56.5061C58.737 231.302 60.9719 232.799 63.3006 234.264L58.8063 241.431C56.3022 239.877 53.9164 238.255 51.5224 236.543ZM38.0843 225.247L44.0142 219.199V219.203C45.9841 221.101 47.9865 222.918 50.0746 224.679L44.5933 231.132C42.3462 229.23 40.2092 227.287 38.0844 225.247L38.0843 225.247ZM123.501 16.7199C125.837 16.7199 127.73 18.602 127.73 20.9262C127.73 23.2504 125.837 25.1325 123.501 25.1325C121.164 25.1325 119.271 23.2504 119.271 20.9262C119.271 18.6019 121.164 16.7199 123.501 16.7199ZM229.541 77.608C230.707 79.624 230.014 82.1956 227.991 83.3557C225.968 84.5199 223.383 83.8303 222.212 81.8184C221.046 79.8065 221.739 77.2308 223.762 76.0707C225.785 74.9066 228.37 75.5961 229.541 77.608ZM229.541 199.392C228.37 201.404 225.785 202.094 223.762 200.93C221.739 199.77 221.046 197.194 222.212 195.182C223.383 193.17 225.968 192.48 227.991 193.645C230.014 194.805 230.707 197.376 229.541 199.392ZM123.501 260.28C121.164 260.28 119.271 258.398 119.271 256.074C119.271 253.75 121.164 251.868 123.501 251.868C125.837 251.868 127.73 253.75 127.73 256.074C127.73 258.398 125.837 260.28 123.501 260.28ZM17.4603 199.392C16.2939 197.376 16.9873 194.805 19.0101 193.645C21.0329 192.48 23.6186 193.17 24.7891 195.182C25.9555 197.194 25.2622 199.77 23.2393 200.93C21.2165 202.094 18.6308 201.404 17.4603 199.392ZM17.4603 77.608C18.6308 75.5961 21.2165 74.9066 23.2393 76.0707C25.2622 77.2308 25.9555 79.8065 24.7891 81.8184C23.6186 83.8303 21.033 84.5199 19.0101 83.3557C16.9873 82.1956 16.2939 79.624 17.4603 77.608ZM123.501 134.294C121.164 134.294 119.271 136.176 119.271 138.5C119.271 140.824 121.164 142.707 123.501 142.707C125.837 142.707 127.73 140.825 127.73 138.5C127.73 136.176 125.837 134.294 123.501 134.294Z"
               fill="white"/>
           </svg>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-8-desktop">
+        <div class="network__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
           <h2>Network</h2>
-          <div class="mdc-layout-grid__inner">
+          <div class="network__content-box mdc-layout-grid__inner">
             <div
-              class="white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-10-desktop">
+              class="white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-10-desktop">
               <p>We have seen hundreds of projects; we understand investors, market sentiment
                 and various interest of the major stakeholders. Thus our know-how can be helpful
                 when making your next pitch. As our partners, you will get all our support in
@@ -435,31 +435,36 @@
     </div>
   </section>
   <section id="team" class="team">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <div class="team_member member-fil mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-          <h4 title="Jiri Fabian">Jiri Fabian</h4>
-          <p>Founder, president</p>
+    <figure>
+      <img class="team__photo" alt="" src="/images/team.jpg">
+      <figcaption>
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="pink-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+              <h2>Team</h2>
+            </div>
+            <div class="team__member member-fil mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <h4 title="Jiri Fabian">Jiri Fabian</h4>
+              <p>Founder, president</p>
+            </div>
+            <div class="team__member member-linh mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <h4 title="Linh Nguyen">Linh Nguyen</h4>
+              <p>Startups analyst</p>
+            </div>
+            <div class="team__member member-janko mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <h4 title="Jan Lopusek">Jan Lopusek</h4>
+              <p>Net-worker</p>
+            </div>
+            <div class="team__member member-jiri mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+              <h4 title="Jiri Penzes">Jirí Penzes</h4>
+              <p>Tech geek</p>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            </div>
+          </div>
         </div>
-        <div class="team_member member-linh mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-          <h4 title="Linh Nguyen">Linh Nguyen</h4>
-          <p>Startups analyst</p>
-        </div>
-        <div class="team_member member-janko mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-          <h4 title="Jan Lopusek">Jan Lopusek</h4>
-          <p>Net-worker</p>
-        </div>
-        <div class="team_member member-jiri mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
-          <h4 title="Jiri Penzes">Jirí Penzes</h4>
-          <p>Tech geek</p>
-        </div>
-        <div class="pink-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <h2>Team</h2>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        </div>
-      </div>
-    </div>
+      </figcaption>
+    </figure>
   </section>
   <section id="blog" class="blog">
     <div class="mdc-layout-grid tm-layout-wrapper">
@@ -469,18 +474,15 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3><a href="https://blog.topmonks.com/how-to-raise-funds-for-your-startup-idea-5cfa33d0277e">Psychology of raising angel funds for your startup</a></h3>
-          <span title="date">8. 1. 2018</span>
           <p>Raising angel funds for your startup idea could be a difficult task. Couple of failures, bad lucks or
             setbacks while meeting with investors...</p>
         </div>
         <div class="white-box blog_middle-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3><a href="https://blog.topmonks.com/why-we-invested-in-quickshirt-9b95e510f3a4">Why we invested in Quickshirt</a></h3>
-          <span title="date">22. 8. 2018</span>
           <p>This investment does not fit under the high scalable startup definition with multiple ROI. Yet, we consider it as a decent entrepreneurship which will help us stabilise our portfolio.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3><a href="https://blog.topmonks.com/thriving-czech-slovak-crypto-scene-dd3dae269f5">Thriving Czech & Slovak crypto scene</a></h3>
-          <span title="date">9. 5. 2018</span>
           <p>Many unexpected parts outside the Silicon Valley have sat in the frontier as blockchain innovation hubs.</p>
         </div>
       </div>
