--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -99,7 +99,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>Let's&nbsp;get rid of the centralized services and support the freedom of the
-              individual together. Welcome to the world of TopMonks Blockchain.</h2>
+              individual together. Welcome to the world of blockchain by TopMonks.</h2>
           </div>
         </div>
       </div>
