--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -55,8 +55,8 @@
       <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h1>Developers
-              for your blockchain&nbsp;idea</h1>
+            <h1>We can BUIDL your<br>
+              blockchain&nbsp;idea</h1>
           </div>
           <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <a href="#contact" class="button">HIRE OUR dTEAM</a>
