Fixed Twitter Card Image URL - has to be absolute

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -32,8 +32,8 @@
   <link rel="canonical" href="https://blockchain.topmonks.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
-  <meta name="twitter:title" property="og:title" content="Developers for your blockchain idea">
-  <meta name="twitter:image" property="og:image" content="/og-image.png">
+  <meta name="twitter:title" property="og:title" content="We can BUIDL your blockchain idea">
+  <meta name="twitter:image" property="og:image" content="https://blockchain.topmonks.com/og-image.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://blockchain.topmonks.com/">
 
