--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blockchain - Topmonks</title>
+  <title>Blockchain by TopMonks</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -48,6 +48,11 @@
 
 <body>
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4KMQ2F"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
 {% include 'shared/header.html' %}
 <div class="tm-content-wrapper">
   <main id="main_content" class="main_content">
@@ -492,7 +497,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="sro mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
-          <p>© 2018 TopMonks, s.r.o.</p>
+          <p>© 2018 TopMonks s.r.o.</p>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
@@ -622,9 +627,5 @@
     </div>
   </footer>
 </div>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4KMQ2F"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
