jobs page for topmonks.cz and text update for the same on topmonks.com

--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -22,6 +22,7 @@
             <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
             <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
             <li><a href="/kontakt/">Kontakt</a></li>
+            <li><a href="/volna-mista/">Volná místa</a></li>
           </ul>
         </nav>
       </div>
