--- a/www.topmonks.cz/src/html/volna-mista/index.html
+++ b/www.topmonks.cz/src/html/volna-mista/index.html
@@ -1,13 +1,13 @@
 {% extends 'layouts/topmonks.html' %}
 {% set page = 'topmonks-jobs' %}
-{% block title %}TopMonks Opened Job Positions{% endblock %}
+{% block title %}volné pracovní pozice v TopMonks{% endblock %}
 
 {% block content %}
 <section class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h2>Yes, we're hiring!</h2>
-      <p>Check our <a href="/about-us/">culture</a> and especially our <a href="/about-us/#company-values">company values</a> and if you'll like it, just fill the form for relevant position below or <a href="mailto:jobs@topmonks.com">let us know</a> and we'll discuss the details. We love meeting interesting people!</p>
+      <h2>Přidej se k nám!</h2>
+      <p>Podívej se <a href="/o-nas/">jak pracujeme</a> a hlavně na naše <a href=/o-nas/#firemni-hodnoty">firemní hodnoty</a> a jestli se ti budou líbit, vyplň tady dole formulář pro konkrétní pozici, nebo nám <a href="mailto:jobs@topmonks.com">dej vědět</a> a probereme detaily. Moc rádi potkáme nové a zajímavé lidi!</p>
 
       <div class="hire-jobs"></div>
       <script id="hire-embed-loader" async defer src="https://hire.withgoogle.com/s/embed/hire-jobs.js?company=topmonkscom"></script>
