--- a/www.topmonks.cz/src/html/o-nas/index.html
+++ b/www.topmonks.cz/src/html/o-nas/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-  <section id="how-we-work" class="mdc-layout-grid">
+  <section id="jak-pracujeme" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-page-header">
         <h2>Jak pracujeme</h2>
@@ -92,10 +92,10 @@
     </div>
   </section>
 
-  <section id="company-values" class="mdc-layout-grid">
+  <section id="firemni-hodnoty" class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Company values</h2>
+        <h2>Firemní hodnoty</h2>
         <ul>
           <li><b>导</b>Neustále vzdělávej sebe i ostatní. Předávání znalostí je u nás povinnost.</li>
           <li><b>灵</b>Buď podnikavý. Vlastní projekty Monků jsou velmi vítány.</li>
