--- a/www.topmonks.cz/src/html/volna-mista/index.html
+++ b/www.topmonks.cz/src/html/volna-mista/index.html
@@ -7,7 +7,7 @@
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Přidej se k nám!</h2>
-      <p>Podívej se <a href="/o-nas/">jak pracujeme</a> a hlavně na naše <a href=/o-nas/#firemni-hodnoty">firemní hodnoty</a> a jestli se ti budou líbit, vyplň tady dole formulář pro konkrétní pozici, nebo nám <a href="mailto:jobs@topmonks.com">dej vědět</a> a probereme detaily. Moc rádi potkáme nové a zajímavé lidi!</p>
+      <p>Podívej se <a href="/o-nas/">jak pracujeme</a> a hlavně na naše <a href="/o-nas/#firemni-hodnoty">firemní hodnoty</a> a jestli se ti budou líbit, vyplň tady dole formulář pro konkrétní pozici, nebo nám <a href="mailto:jobs@topmonks.com">dej vědět</a> a probereme detaily. Moc rádi potkáme nové a zajímavé lidi!</p>
 
       <div class="hire-jobs"></div>
       <script id="hire-embed-loader" async defer src="https://hire.withgoogle.com/s/embed/hire-jobs.js?company=topmonkscom"></script>
