Link to jobs pages

--- a/www.topmonks.com/src/html/about-us/index.html
+++ b/www.topmonks.com/src/html/about-us/index.html
@@ -97,7 +97,7 @@
           <li><b>共享</b> Give and you shall receive.</li>
           <li><b>怪事</b> Weirdness, non-conformity is welcome.</li>
         </ul>
-        <p>If you like these ideas, come <a href="mailto:jobs@topmonks.com">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting people.</p>
+        <p>If you like these ideas, come <a href="/jobs/">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting people.</p>
       </div>
     </div>
   </section>
