--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -7,7 +7,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>About</h3>
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-        <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
+        <p>If you like these ideas, come and <a href="/jobs/">join us</a>, and have your <a
           href="/about-us/">project delivered by us</a>.
           Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
         </p>
