--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -7,7 +7,7 @@
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Yes, we're hiring!</h2>
-      <p>Check our <a href="/about-us/">culture</a> and especially our <a href="/about-us/#company-values">company values</a> and if you'll like it, just fill the form for relevant position below or <a href="mailto:jobs@topmonks.com">let us know</a> and we'll discuss the details. We love meeting interesting people!</p>
+      <p>Check our <a href="/about-us/">culture</a> and especially our <a href="/about-us/#company-values">company values</a> and if you like it, just fill the form for relevant position below or <a href="mailto:jobs@topmonks.com">let us know</a> and we'll discuss the details. We love meeting interesting people!</p>
 
       <div class="hire-jobs"></div>
       <script id="hire-embed-loader" async defer src="https://hire.withgoogle.com/s/embed/hire-jobs.js?company=topmonkscom"></script>
