TopMonks.com - footer contact
Deleted irelevant information

--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -29,21 +29,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <h3>Contact</h3>
         <span itemprop="legalName">TopMonks, s.r.o.</span>
-        <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
-          <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-            <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
-            <span itemprop="postalCode">141 00</span>
-            <span itemprop="addressLocality">Praha 4</span><br>
-            <span itemprop="addressCountry">Czech Republic</span>
-          </div>
-          <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
-            <meta itemprop="latitude" content="50.045386">
-            <meta itemprop="longitude" content="14.491246">
-          </div>
-        </div>
-        <div><a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
-          <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
-
+        <div><a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
       </div>
     </div>
   </div>
