Footer - deleted VAT ID from everywhere

--- a/blockchain.topmonks.com/src/html/shared/footer.html
+++ b/blockchain.topmonks.com/src/html/shared/footer.html
@@ -50,7 +50,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>© 2018 TopMonks s.r.o., VAT ID: <span itemprop="vatID">CZ24847437</span></p>
+        <p>© 2018 TopMonks s.r.o.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="social-buttons">
