--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -21,7 +21,7 @@
             <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
             <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
-            <li><a href="https://dribbble.com/TopMonks">Dribble</a></li>
+            <li><a href="https://dribbble.com/TopMonks">Dribbble</a></li>
             <li><a href="/contact/">Contacts</a></li>
             <li><a href="/jobs/">Jobs</a></li>
           </ul>
