--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -21,7 +21,7 @@
             <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
             <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
-            <li><a href="https://dribbble.com/TopMonks">Dribble</a></li>
+            <li><a href="https://dribbble.com/TopMonks">Dribbble</a></li>
             <li><a href="/kontakt/">Kontakt</a></li>
             <li><a href="/volna-mista/">Volná místa</a></li>
           </ul>
