--- a/studio.topmonks.com/src/html/shared/footer.html
+++ b/studio.topmonks.com/src/html/shared/footer.html
@@ -20,7 +20,7 @@
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
             <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
-            <li><a href="https://dribbble.com/TopMonks">Dribble</a></li>
+            <li><a href="https://dribbble.com/TopMonks">Dribbble</a></li>
             <li><a href="/contact/">Contacts</a></li>
           </ul>
         </nav>
