Meet-Up: added reference - Block-Stars

--- a/www.topmonks.com/src/html/meet-us/index.html
+++ b/www.topmonks.com/src/html/meet-us/index.html
@@ -163,6 +163,19 @@
           </div>
         </div>
       </div>
+      <div class="tm-meetup box mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+            <a class="img-link" href="http://block-stars.com/"><img class="tm-meetup__img" alt="Blockstars logo" src="/images/community/blockstars.png"></a>
+          </div>
+          <div class="tm-meetup__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h3><a href="http://block-stars.com/">Block-Stars</a></h3>
+            <p>The aim of the event was to evangelise the blockchain technology for the professional audience from corporate representatives,
+              startup incubators, accelerators, investors, startup founders and general public. This one day event attracted promising projects, experts or investors from CEE region.</p>
+            <div class="links"><a href="http://block-stars.com/">http://block-stars.com/</a></div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
