Dribbble icon added in Studio.Topmonks.com

--- a/caffe.topmonks.cz/src/shared/footer.html
+++ b/caffe.topmonks.cz/src/shared/footer.html
@@ -7,8 +7,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>About</h3>
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-        <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
-          href="/references">project delivered by us</a>.
+        <p>If you like these ideas, come and <a href="/jobs/">join us</a>, and have your <a
+          href="/about-us/">project delivered by us</a>.
           Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
         </p>
       </div>
@@ -18,31 +18,19 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
-            <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
+            <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+            <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
             <li><a href="https://dribbble.com/TopMonks">Dribbble</a></li>
             <li><a href="/contact/">Contacts</a></li>
+            <li><a href="/jobs/">Jobs</a></li>
           </ul>
         </nav>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
         <h3>Contact</h3>
         <span itemprop="legalName">TopMonks, s.r.o.</span>
-        <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
-          <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-            <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
-            <span itemprop="postalCode">141 00</span>
-            <span itemprop="addressLocality">Praha 4</span><br>
-            <span itemprop="addressCountry">Czech Republic</span>
-          </div>
-          <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
-            <meta itemprop="latitude" content="50.045386">
-            <meta itemprop="longitude" content="14.491246">
-          </div>
-        </div>
-        <div><a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
-          <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
-
+        <div><a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
       </div>
     </div>
   </div>
