--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -498,7 +498,7 @@
 <h3>UI Kit For dApps</h3>
             <p>We firmly believe that blockchain and crypto should be available to everyone.
               With the help of our expert designers and developers, Topmonks will ensure your
-              UX is intuitive and&nbsp;smooth.</p>
+              UX is intuitive and smooth.</p>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
             <img src="images/img_Binary.png" alt="Landing page of the Binary" width="540px"
@@ -506,18 +506,18 @@
         </div>
           <div class="references_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
             <h3>Binary Trading Platform</h3>
-            <p>Our team has an extensive and longterm experience of working with trading
-              platforms, making sure trading across multiple channels is absolutely secure,
-              intuitive and effective.</p>
+            <p>Our team has an extensive and longterm experience of working with trading platforms, making sure trading across multiple channels is absolutely secure, intuitive and effective.</p>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
             <img src="images/img_VP.png" alt="Landing page of the VP" width="540px"
                  height="250px">
           </div>
           <div class="references_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-5-desktop">
-            <h3>Veracity.protocol landing page</h3>
-            <p>Although in the end, it didn't go live, we learned a lot about the ICOs while
-              iterating on several versions of a landing&nbsp;page.</p>
+            <h3>Veracity.protocol</h3>
+            <p>Our team developed 3&nbsp;landing pages, ICO smart contract and supply chain
+              tracking platform based on smart contracts, while securing a major partnership
+              and investment partner, ICO advisor and a first use case in aerospace as part of
+              our support.</p>
           </div>
         </div>
       </div>
