--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -33,7 +33,7 @@
   <link rel="canonical" href="https://blockchain.topmonks.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
-  <meta name="twitter:title" property="og:title" content="We can BUIDL your blockchain idea">
+  <meta name="twitter:title" property="og:title" content="We #BUIDL.">
   <meta name="twitter:image" property="og:image" content="https://blockchain.topmonks.com/og-image.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://blockchain.topmonks.com/">
@@ -71,8 +71,8 @@
       <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h1>We can #BUIDL your<br>
-              blockchain&nbsp;idea</h1>
+            <h1>We #BUIDL.
+            </h1>
           </div>
           <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <a href="#contact" class="button">HIRE OUR dTEAM</a>
