--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -72,7 +72,7 @@
         <div class="mdc-layout-grid__inner">
           <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h1>style="
-                font-size: 80px;
+                font-size: 80px;"
               We #BUIDL.</h1>
           </div>
           <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
