--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -71,8 +71,7 @@
       <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h1>style="
-                font-size: 80px;"
+            <h1 style=font-size:"80;">
               We #BUIDL.</h1>
           </div>
           <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
