include js file

--- a/create-site/src/html/index.html
+++ b/create-site/src/html/index.html
@@ -15,6 +15,8 @@
     <h1>%APP_TITLE%</h1>
     <h2>Created with simple generator</h2>
   </div>
+
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
