--- a/create-site/src/html/index.html
+++ b/create-site/src/html/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+  <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 
 <body>
@@ -15,4 +16,5 @@
     <h2>Created with simple generator</h2>
   </div>
 </body>
+
 </html>
