--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -4,46 +4,56 @@
 {% block head %}
 <link rel="stylesheet" href="/stylesheets/case-studies-common.css">
 <style>
-.tm-case-study__section--integration {
-background-image: url("/images/case-studies/bgnd_integration.svg");
-}
-.tm-case-study__section--infrastructure {
-background-image: url("/images/case-studies/bgnd_infrastructure.svg");
-}
-.tm-case-study__hero {
-background-position: bottom 600px left calc(50% - 530px);
-}
-.tm-case-study__hero img {
-width: 100%;
-}
-.tm-case-study__emphasis {
-background-color: #f3f3f3;
-border-radius: 20px;
-}
-@media screen and (max-width: 839px){
-.tm-layout-wrapper--mobile {
-padding: 0 1em;
-}
-}
-@media screen and (min-width: 840px) {
-.tm-case-study__hero {
-background-position: bottom 560px left calc(50% - 400px);
-}
-.tm-case-study__hero img {
-margin-bottom: 30px;
-}
-.tm-case-study__hero .tm-img-wrapper {
-position: relative;
-}
-.tm-case-study__hero .first {
-left: 55px;
-}
-.tm-case-study__hero .last img {
-position: absolute;
-right: 55px;
-top: 60px;
-}
-}
+  .tm-case-study__section--costumers {
+    background-image: url("/images/case-studies/go-real-europe/bgnd_costumers.svg");
+  }
+
+  .tm-case-study__section--costume {
+    background-image: url("/images/case-studies/bgnd_costume.svg");
+  }
+
+  .tm-case-study__hero {
+    background-position: bottom 600px left calc(50% - 530px);
+  }
+
+  .tm-case-study__hero img {
+    width: 100%;
+  }
+
+  .tm-case-study__emphasis {
+    background-color: #f3f3f3;
+    border-radius: 20px;
+  }
+
+  @media screen and (max-width: 839px) {
+    .tm-layout-wrapper--mobile {
+      padding: 0 1em;
+    }
+  }
+
+  @media screen and (min-width: 840px) {
+    .tm-case-study__hero {
+      background-position: bottom 560px left calc(50% - 400px);
+    }
+
+    .tm-case-study__hero img {
+      margin-bottom: 30px;
+    }
+
+    .tm-case-study__hero .tm-img-wrapper {
+      position: relative;
+    }
+
+    .tm-case-study__hero .first {
+      left: 55px;
+    }
+
+    .tm-case-study__hero .last img {
+      position: absolute;
+      right: 55px;
+      top: 60px;
+    }
+  }
 </style>
 {% endblock %}
 
@@ -53,7 +63,7 @@ top: 60px;
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>GOREALEUROPE</h2>
-        <h3>Go Real is a travel startup we truly love. It offers smart travel planning
+        <h3 class="h3_gorealeurope">Go Real is a travel startup we truly love. It offers smart travel planning
           and custom trip package booking within a few clicks. he product is loved by
           customers from the US, Canada, Australia, New Zealand, and Singapore. With
           300&nbsp;user reviews on TrustPilot and Facebook, GRE has earned a nearly perfect
@@ -64,7 +74,7 @@ top: 60px;
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">4000+</strong>
             <p>travelers</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">★★★★★</strong>
-            <p>Excellent Reviews on Facebook (4.9&nbsp;out of 5) and Trustpilot  (9.6&nbsp;out
+            <p>Excellent Reviews on Facebook (4.9&nbsp;out of 5) and Trustpilot (9.6&nbsp;out
               of&nbsp;10)</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">$2.3M</strong>
             <p>in year-to-date 2018&nbsp;sales, doubling year-to-year</p></li>
@@ -84,9 +94,7 @@ top: 60px;
 <section>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--integration">
-        <h3>Story</h3>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><h3>Story</h3>
         <p>Founder David Manley approached us with an idea to automate his business,
           previously operated via his magical Excel spreadsheet. David had tremendous
           experience in the travel industry, providing customers with an on-demand
@@ -97,8 +105,7 @@ top: 60px;
           input into a uniquely structured database, enabling GRE’s&nbsp;proprietary
           algorithm to instantly create a perfect travel itinerary. The itinerary
           navigates travelers through a stress-free trip, making sure they never get lost
-          or waste time. Even the most complex trips become a seamless experience.</p>
-      </div>
+          or waste time. Even the most complex trips become a seamless experience.</p></div>
     </div>
   </div>
 </section>
@@ -107,7 +114,7 @@ top: 60px;
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--integration">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--costumers">
         <h3>Costumers pick</h3>
         <p>Customers pick their preferred dates, cities, interests, and activities.</p>
       </div>
@@ -118,7 +125,8 @@ top: 60px;
 <section>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure tm-case-study__section--costume">
         <h3>Custom itinerary</h3>
         <p>A&nbsp;unique, custom itinerary with the overall plan, transportation, tours,
           transfers and hotels bookings is automatically generated.</p>
@@ -133,7 +141,8 @@ top: 60px;
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--integration">
         <h3>The itinerary reflects</h3>
-        <p>The itinerary reflects the preferences of the travelers while also accounting for seasonal activities, date restrictions, and transportation schedules.</p>
+        <p>The itinerary reflects the preferences of the travelers while also accounting for seasonal activities, date
+          restrictions, and transportation schedules.</p>
       </div>
     </div>
   </div>
@@ -142,7 +151,8 @@ top: 60px;
 <section>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
         <h3>The itinerary provides smart navigation</h3>
         <p>The itinerary provides smart navigation for self-guided travel, one-step
           package booking, and the opportunity to experience special activities such as
@@ -155,7 +165,8 @@ top: 60px;
 <section>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--infrastructure">
         <h3>Details information</h3>
         <p>All the details and information the traveler needs for his particular trip are at her fingertips.</p>
       </div>
