GoRealEurope Case studies web

--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -62,22 +62,22 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>GOREALEUROPE</h2>
-        <h3 class="h3_gorealeurope">Go Real is a travel startup we truly love. It offers smart travel planning
-          and custom trip package booking within a few clicks. he product is loved by
-          customers from the US, Canada, Australia, New Zealand, and Singapore. With
-          300&nbsp;user reviews on TrustPilot and Facebook, GRE has earned a nearly perfect
-          rating.</h3>
+        <h2>GO REAL EUROPE</h2>
+        <h3 class="h3_gorealeurope">GRE is a fast-growing travel startup specializing in crafting personalized
+          itineraries for any type of traveler wanting to touch down and explore the gems
+          of Europe. Travelers from around the globe namely from the US, Canada,
+          Australia, New Zealand, and Singapore, rave about GRE’s&nbsp;efficiency,
+          reliability, and ease&nbsp;&ndash; all of which you can read about in their impressive
+          reviews on TrustPilot and Facebook.</h3>
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">5</strong>
             <p>years in production</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">4000+</strong>
             <p>travelers</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">★★★★★</strong>
-            <p>Excellent Reviews on Facebook (4.9&nbsp;out of 5) and Trustpilot (9.6&nbsp;out
-              of&nbsp;10)</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">$2.3M</strong>
-            <p>in year-to-date 2018&nbsp;sales, doubling year-to-year</p></li>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">$2.5M</strong>
+            <p>in sales this year alone and doubling</p></li>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">18</strong>
+            <p>technologies</p></li>
         </ul>
       </div>
     </div>
